# CPlusPlus_study_notes

./: LICENCE  README.md
1_面向过程/11_字符串/: 1_new与delete.cpp
1_面向过程/12_指针/: 2_基本数据类型指针.cpp  7_指针数组.cpp  8_数组指针.cpp  9_数组指针使用.cpp
1_面向过程/15_引用变量/: 1_引用简介.cpp
1_面向过程/19_枚举/: 1_.cpp
2_面向对象/1_初识class/: 1_简介.cpp  2_一段代码.cpp  3_访问控制.cpp  4_类内声明类外定义.cpp  4_类内声明类外定义.hpp
2_面向对象/2_构造与析构/: 10_this指针.cpp  11_拷贝构造.cpp  12_拷贝构造调用时机.cpp  13_拷贝构造功能.cpp  14_深拷贝.cpp  1_形式.cpp  2_作用.cpp  3_默认构造.cpp  4_初始化列表.cpp  5_初始化列表的必要性.cpp  6_构造函数重载.cpp  7_构造函数默认参数.cpp  8_析构函数.cpp  9_delete[ ].cpp
2_面向对象/3_运算符重载/: 1_类内重载:数组相加.cpp  2_类外重载.cpp  2_类外重载与友缘.cpp  3_输入输出运算符重载  3_输入输出运算符重载.cpp  4_重载限制.cpp  5_赋值运算符重载  5_赋值运算符重载.cpp  6_函数调用运算符.cpp  7_下标重载运算符.cpp
2_面向对象/4_继承/: 2_继承的作用.cpp  3_基类访问权限.cpp  4_继承的权限.cpp  5_基类子类成员同名.cpp  6_构造析构调用顺序.cpp  7_有参数构造的传递.cpp
2_面向对象/5_多态/: 1_基类指针指向子类空间.cpp  2_虚函数virtual.cpp  3_多态.cpp  4_静态联编与动态联编.cpp  5_虚析构.cpp  6_多态调用原理.cpp  7_手抓虚表.cpp
2_面向对象/6_string类/: 1_string类简介.cpp
4_C++STL/1_分配器/: 构造函数.cpp
x_OpenCV任务/校赛/: CMakeLists.txt
y_大恒相机驱动/: 1.cpp  CMakeLists.txt  MyMain.cpp  main.cpp
z_其他/: Cmake查找包.html  Cmake查找包.md  a_Markdown.md  linux目录结构.html  linux目录结构.md
